# DevHistory

./: .env.example  .gitignore  BACKEND_SETUP.md  COMPLETION_REPORT.md  GETTING_STARTED.md  PRODUCTION_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  UI_UX_IMPLEMENTATION.md  pyproject.toml
apps/api/: celerybeat-schedule
apps/api/app/: config.py  crypto.py  database.py  deps.py  exceptions.py  main.py
apps/api/app/models/: __init__.py  analytics_event.py  blog_post.py  commit.py  generated_content.py  llm_credential.py  note.py  oauth_account.py  problem.py  repo.py  style_profile.py  user.py  user_profile.py  weekly_summary.py
apps/api/app/routers/: __init__.py  analytics.py  auth.py  charts.py  coach.py  collector.py  dashboard.py  (+8 more)
apps/api/worker/: celery_app.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: analytics-tracker.tsx  nav-bar.tsx
apps/web/lib/: analytics.ts  api-client.ts  api.ts  design-tokens.ts
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md  ORACLE_FREE_DEPLOY.md  SECURITY.md
infra/: .env.prod.example  Caddyfile  alembic.ini  api.Dockerfile  api.prod.Dockerfile  docker-compose.prod.yml  docker-compose.yml  web.Dockerfile  web.prod.Dockerfile
infra/migrations/: env.py
infra/migrations/versions/: 001_initial_schema.py  002_add_portfolio_settings.py  003_production_schema_v2.py  004_style_profile_learned_prompt.py  005_add_repo_watchers.py
scripts/: deploy_prod.sh  server_bootstrap_ubuntu.sh
(+46 files in other folders)
